public/assets/css/main.css
/* ... */
.entry-meta.meta-1,
.entry-meta.meta-2 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.entry-meta a.read-more {
  font-size: 12px;
  border-radius: 30px;
  border: 1px solid #abd7ab;
  padding: 10px 15px;
  color: #98ca98;
  font-weight: 600;
  display: inline-block;
}

.single-share img {
  width: 20px;
  opacity: 0.7;
}

.single-share img:hover {
  opacity: 1;
}

/*LAYOUT -> HEADER STYLE*/
/*Header default*/
.header-top-ptb-1 {
  padding: 10px 0;
  border-bottom: 1px solid #853568;
  background-color: #EF8AAE;
  font-size: 14px;
  background-image: url(../imgs/theme/topbar-bg.jpg);
  line-height: 1;
}

.header-info-right {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.header-info>ul {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
}

.header-info>ul>li {
  margin-right: 30px;
  position: relative;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.header-info>ul>li:before {
  content: '';
  position: absolute;
  right: -14px;
  top: 50%;
  -webkit-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 1px;
  height: 20px;
  background: #dedfe2;
}

.header-info>ul>li:last-child {
  margin-right: 0;
}

.header-info>ul>li:last-child:before {
  display: none;
}

.header-info>ul>li a {
  color: #1a1a1a;
  font-weight: 500;
}

.header-info>ul>li a i {
  font-size: 12px;
  margin-right: 5px;
}

.header-info>ul>li a.language-dropdown-active i.fa-chevron-down {
  font-size: 8px;
  margin-left: 5px;
}

.header-info>ul>li>ul.language-dropdown {
  position: absolute;
  top: 100%;
  left: 0;
  z-index: 2;
  min-width: 120px;
  background: #fff;
  border-radius: 0 0 4px 4px;
  -webkit-transform: translateY(20px);
  transform: translateY(20px);
  visibility: hidden;
  opacity: 0;
  padding: 10px 15px;
  -webkit-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
  border: 1px solid #eef0ee;
}

.header-info>ul>li>ul li {
  display: block;
}

.header-info>ul>li>ul li a {
  display: block;
  color: #696969;
  padding: 5px;
}

.header-info>ul>li>ul li a:hover {
  color: #088178;
  background-color: none;
}

.header-info>ul>li>ul li a img {
  max-width: 15px;
  display: inline-block;
  margin-right: 5px;
}

.header-info>ul>li:hover>a {
  color: #333;
}

.header-info>ul>li:hover>ul.language-dropdown {
  visibility: visible;
  opacity: 1;
  -webkit-transform: translateY(0);
  transform: translateY(0);
  top: 25px;
}

.header-info i {
  font-size: 12px;
  margin-right: 5px;
  line-height: 6px;
}

.header-wrap {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.header-wrap .header-nav {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.header-wrap.header-space-between {
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.header-wrap .header-right {
  width: 100%;
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: justify;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.logo a {
  display: block;
}

.logo.logo-width-1 {
  margin-right: 123px;
}

.logo.logo-width-1 a img {
  width: 120px;
  min-width: 120px;
}

#logo_ff img {
  max-width: 60% !important;

}

.search-style-1 form {
  width: 370px;
  position: relative;
}

.search-style-1 form input {
  font-size: 15px;
  height: 48px;
  color: #1a1a1a;
  border-radius: 26px;
  padding: 3px 50px 3px 20px;
  border: 1px solid #f5f5f5;
  background-color: #f5f5f5;
  -webkit-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
  transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
}

.header-action .header-action-icon.header-action-mrg-none2 {
  margin-right: 0px;
}

.header-action .header-action-icon:last-child {
  margin-right: 0;
}

.header-action .header-action-icon>a span.pro-count {
  position: absolute;
  right: -11px;
  bottom: -8px;
  color: #ffffff;
  height: 20px;
  width: 20px;
  border-radius: 100%;
  font-weight: 700;
  font-size: 12px;
  text-align: center;
  line-height: 20px;
}

.header-action-2 {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.header-action-2 .header-action-icon-2:last-child {
  padding: 0 0px 0 8px;
}

.header-action-2 .header-action-icon-2>a {
  font-size: 30px;
  color: #333;
  line-height: 1;
  display: inline-block;
  position: relative;
  width: 1em;
}

.header-action-2 .header-action-icon-2>a img {
  width: 100%;
  max-width: 25px;
  opacity: 0.8;
}

.header-action-2 .header-action-icon-2>a span.pro-count {
  position: absolute;
  right: -11px;
  top: -5px;
  color: #ffffff;
  height: 18px;
  width: 18px;
  border-radius: 100%;
  font-weight: 500;
  font-size: 11px;
  text-align: center;
  line-height: 18px;
}

.cart-dropdown-wrap ul li {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin: 0 0 20px;
}

.cart-dropdown-wrap ul li .shopping-cart-img a {
  display: block;
}

.header-height-2 {
  border-bottom: 1px solid #e2e9e1;
}

.header-height-3 {
  min-height: 132px;
}

.header-height-4 {
  min-height: 120px;
}

.search-popup-wrap.search-visible {
  visibility: visible;
  opacity: 1;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}
/* ... */

